--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://www.fidelity.com/favicon.ico" alt="Fidelity Logo">
+            <img src="Fidelity-logo.png" alt="Fidelity Logo">
         </div>
         <h2>Log in</h2>
         <form id="loginForm">
