--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            position: relative;
         }
 
         .container {
@@ -27,15 +28,6 @@
 
         .container h2 {
             margin-bottom: 20px;
-        }
-
-        .logo {
-            text-align: left;
-            padding-bottom: 20px;
-        }
-
-        .logo img {
-            width: 120px;
         }
 
         .form-group {
@@ -124,6 +116,16 @@
             text-align: center;
         }
 
+        .logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
+
+        .logo img {
+            width: 150px;
+        }
+
         .error {
             color: red;
             margin-top: 10px;
@@ -131,10 +133,10 @@
     </style>
 </head>
 <body>
+    <div class="logo">
+        <img src="https://www.fidelity.com/favicon.ico" alt="Fidelity Logo">
+    </div>
     <div class="container">
-        <div class="logo">
-            <img src="Fidelity-logo.png" alt="Fidelity Logo">
-        </div>
         <h2>Log in</h2>
         <form id="loginForm">
             <div class="form-group">
