--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="https://www.fidelity.com/favicon.ico" alt="Fidelity Logo">
+        <img src="fidelity-vector-logo-small.png" alt="Fidelity Logo">
     </div>
     <div class="container">
         <h2>Log in</h2>
