--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         .forgot-password a,
         .signup-link a {
-            color: #007bff;
+            color: black;
             text-decoration: none;
         }
 
@@ -92,7 +92,7 @@
         }
 
         .footer-links a {
-            color: #007bff;
+            color: black;
             margin-left: 20px;
             text-decoration: none;
         }
