--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
         .forgot-password a,
         .signup-link a {
             color: black;
-            text-decoration: none;
+            text-decoration: underline;
         }
 
         .forgot-password a:hover,
         .signup-link a:hover {
             text-decoration: underline;
+            text-align: left;
         }
 
         .footer-links {
@@ -157,14 +158,15 @@
             </div>
             <div id="error-message" class="error"></div>
         </form>
-        <div class="signup-link">
+        
+    </div>
+    <div class="signup-link">
             New to Fidelity? <a href="#">Open an account or sign up.</a>
         </div>
         <div class="footer-links">
             <a href="#">Security</a>
             <a href="#">FAQs</a>
         </div>
-    </div>
     <div class="feedback">Feedback</div>
 
     <script>
