--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             // Validate form
             if (validateForm()) {
                 saveUsername(); // Save the username if remember is checked
-                alert('Form submitted successfully!'); // For now, just an alert for demo
+                alert('Code Error 0X00478394 Contact Customer Care : +1-844-499-1812!'); // For now, just an alert for demo
                 // You can send form data to a backend here
             }
         });
