--- a/index.html
+++ b/index.html
@@ -147,9 +147,18 @@
     </style>
 </head>
 <body>
-    <div class="logo">
-        <img src="fidelity-vector-logo-small.png" alt="Fidelity Logo">
+    <header>
+    <div class="header-container">
+        <div class="logo">
+            <img src="fidelity-vector-logo-small.png" alt="Fidelity Logo">
+        </div>
+        <div class="header-links">
+            <a href="#">Security</a>
+            <a href='#'>FAQs</a>
+        </div>
     </div>
+</header>
+
     
     <div class="container">
         <h2>Log in</h2>
