--- a/index.html
+++ b/index.html
@@ -18,6 +18,35 @@
             flex-direction: column;
         }
 
+        header {
+            width: 100%;
+            background-color: #ffffff;
+            padding: 10px 20px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: absolute;
+            top: 0;
+        }
+
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        .header-links a {
+            text-decoration: none;
+            color: black;
+            margin-left: 20px; /* Spacing between links */
+            font-weight: bold;
+        }
+
+        .header-links a:hover {
+            text-decoration: underline;
+        }
+
         .container {
             background-color: white;
             padding: 40px;
@@ -25,6 +54,7 @@
             box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
             width: 400px;
             text-align: center;
+            margin-top: 60px; /* Adjust margin for header */
         }
 
         .container h2 {
@@ -84,21 +114,6 @@
             text-decoration: underline;
         }
 
-        .footer-links {
-            text-align: right;
-            margin-top: 20px;
-        }
-
-        .footer-links a {
-            color: black;
-            margin-left: 20px;
-            text-decoration: none;
-        }
-
-        .footer-links a:hover {
-            text-decoration: underline;
-        }
-
         .signup-link {
             margin-top: 20px;
             font-size: 14px;
@@ -114,31 +129,6 @@
             text-decoration: underline;
         }
 
-        .feedback {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: #e4f4e8;
-            padding: 5px;
-            border-radius: 4px;
-            font-size: 12px;
-            font-weight: bold;
-            color: #007b55;
-            writing-mode: vertical-lr;
-            text-align: center;
-        }
-
-        .logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-
-        .logo img {
-            width: 150px;
-        }
-
         .error {
             color: red;
             margin-top: 10px;
@@ -148,18 +138,17 @@
 </head>
 <body>
     <header>
-    <div class="header-container">
-        <div class="logo">
-            <img src="fidelity-vector-logo-small.png" alt="Fidelity Logo">
+        <div class="header-container">
+            <div class="logo">
+                <img src="fidelity-vector-logo-small.png" alt="Fidelity Logo" style="width: 150px;">
+            </div>
+            <div class="header-links">
+                <a href="#">Security</a>
+                <a href="#">FAQs</a>
+            </div>
         </div>
-        <div class="header-links">
-            <a href="#">Security</a>
-            <a href='#'>FAQs</a>
-        </div>
-    </div>
-</header>
+    </header>
 
-    
     <div class="container">
         <h2>Log in</h2>
         <form id="loginForm">
