--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         header {
             width: 100%;
             background-color: #ffffff;
-            padding: 10px 20px;
+            padding: 15px 20px;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             display: flex;
             justify-content: space-between;
@@ -38,7 +38,7 @@
 
         .header-links a {
             text-decoration: none;
-            color: black;
+            color: grey;
             margin-left: 20px; /* Spacing between links */
             font-weight: bold;
         }
