--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         .header-links a {
             text-decoration: none;
-            color: grey;
+            color: #4B4B4B;
             margin-left: 20px; /* Spacing between links */
         }
 
