--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             text-decoration: none;
             color: #4B4B4B;
             margin-left: 20px; /* Spacing between links */
+            margin-right: 20px;
         }
 
         .header-links a:hover {
