--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     </div>
 
             <!-- Replace the static number text in the error message -->
+       <!-- Replace the static number text in the error message -->
     <script>
         // Function to save username to localStorage if "Remember my username" is checked
         function saveUsername() {
@@ -248,6 +249,7 @@
             loadRememberedUsername();
         };
     </script>
+
 
 </body>
 </html>
