--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         }
 
         .error a {
-            color: #155724;
+            color: red;
             text-decoration: none;
             background-color: #28a745;
             padding: 10px 15px;
