--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         }
 
         .error a {
-            color: red;
+            color:  #155724;
             text-decoration: none;
-            background-color: #28a745;
+            background-color: red;
             padding: 10px 15px;
             border-radius: 5px;
             display: inline-block;
