--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         .error a {
             color:  #155724;
             text-decoration: none;
-            background-color: red;
+            background-color: #f8d7da;
             padding: 10px 15px;
             border-radius: 5px;
             display: inline-block;
