--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             background-color: #f8d7da;
             padding: 10px 15px;
             border-radius: 5px;
-            display: inline-block;
+            display: bold;
             margin-top: 10px;
         }
 
