--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
 
     <div id="loading">
-        <img src="/mnt/data/image.png" alt="Loading" width="80" height="80">
+        <img src="/mnt/data/loading.gif" alt="Loading" width="80" height="80">
         <h3>Loading...</h3>
     </div>
 
