--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
 
     <div id="loading">
-        <img src="loading.gif" alt="Loading" width="80" height="80">
+        <img src="loading-green-loading.gif.mp4" alt="Loading" width="80" height="80">
         <h3>Loading...</h3>
     </div>
 
