--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             width: 25px;
             height: 25px;
             display: flex;
-            justify-content: left;
-            align-items: left;
+            justify-content: center;
+            align-items: center;
             font-size: 16px;
             margin-right: 10px;
         }
