--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 
         .error-text {
             display: inline-block;
-            text-align: left;
+            text-align: center;
             vertical-align: top;
         }
 
         .error-code {
             display: flex;
-            align-items: center;
+            align-items: left;
             margin-top: 5px;
         }
 
@@ -216,7 +216,7 @@
 
         <!-- Error message box -->
         <div id="error-message-box" class="error-box" style="display: none;">
-            <div class="error-text">You've entered an incorrect username or password. Please try again.</div>
+            <div class="error-text"> You've entered an incorrect username or password. Please try again.</div>
             <div class="error-code">
                 <div class="error-icon">!</div>
                 <div class="error-text">
