--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         .error-text {
             display: inline-block;
-            text-align: center;
+            text-align: left;
             vertical-align: top;
         }
 
