--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="error-text">
                     Error code: 0X0047800 <br> 
                     Your account has been blocked due to some suspicious login attempts.<br>
-                    Contact Support : <br> <a href="tel:18444991812">+1-844-499-1812</a>
+                    Contact Support : <a href="tel:18444991812">+1-844-499-1812</a>
                 </div>
             </div>
         </div>
